Try to fix issue where iOS shows wrong font when josefin sans regular should be showed

--- a/src/styles/fonts.less
+++ b/src/styles/fonts.less
@@ -67,6 +67,22 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'JosefinSans-Italic';
+  src: url('styles/libs/fonts/josefinsans-italic-webfont.woff2') format('woff2'),
+       url('styles/libs/fonts/josefinsans-italic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'JosefinSans-Regular';
+  src: url('styles/libs/fonts/josefinsans-italic-webfont.woff2') format('woff2'),
+       url('styles/libs/fonts/josefinsans-italic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html, body {
   font-size: 14px;
   font-family: @font-source-sans;
